removed double scroll and fixed endpoint service

--- a/src/styles.css
+++ b/src/styles.css
@@ -6552,8 +6552,8 @@ div.clear input.btn:hover {
   padding: 20px;
   transition: all 0.3s;
   width: 100%;
-  height: 92vh;
-  overflow-y: scroll;
+  /*height: 92vh;
+   overflow-y: scroll; */
   justify-content: center;
 }
 
